# switch_qt

./: README.md  get_geometry_info-Dokumentation.md
exts/synctwin.item.connector/config/: extension.toml
exts/synctwin.item.connector/docs/: README.md
exts/synctwin.item.connector/synctwin/item/connector/: __init__.py  extension.py  item_engineering_connector.py
switch_demo/: CMakeLists.txt  main.cpp  scene.cpp  scene.h
switch_demo_qml/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  scene.cpp  viewitem.cxx  viewitem.h
switch_demo_qt/: CMakeLists.txt  main.cpp  scene.h  view.cxx  view.h
